css/style.css
/* ... */
.gallery-item:hover a {
  opacity: 1;
}

.bg-gallery {
  background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), no-repeat center center;
  background-size: cover;
}

.gallery-carousel .owl-nav {
  position: absolute;
  width: 135px;
  height: 60px;
  top: -90px;
  left: calc(50% - 67px);
  display: flex;
  align-items: center;
  justify-content: space-between;
  z-index: 1;
}

.gallery-carousel .owl-nav .owl-prev,
.gallery-carousel .owl-nav .owl-next {
  width: 60px;
  height: 60px;
  display: flex;
  align-items: center;
  justify-content: center;
  color: #000000;
  background: #FFFFFF;
  font-size: 30px;
  opacity: 0;
}

@media (max-width: 767.98px) {
  #event .border-right {
    border-right: none !important;
  }
}
.countdown{
  position: relative;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  padding: 0.5rem 1rem;
}
.countdown div{
  
  flex-basis: 80px;
}
.countdown p{
  
  font-size: 50px;
  margin-bottom: -14px;
}
.fade-in {
  animation: fadeIn 3s ease; /* 2s is the duration */
}
@keyframes fadeIn {
  0% {
      opacity: 0;
  }}

